@@ -187,6 +187,10 @@ New Features
 
 * SOLR-7888: Analyzing suggesters can now filter suggestions by a context field (Arcadius Ahouansou, janhoy)
 
+* SOLR-8217: JSON Facet API: add "method" param to terms/field facets to give an execution
+  hint for what method should be used to facet.  (yonik)
+
+
 Bug Fixes
 ----------------------
 
